--- a/style.css
+++ b/style.css
@@ -118,3 +118,24 @@ button {
   border: 3px solid #3882F6;
   border-radius: 10px;
 }
+
+.testimonial-section {
+  background-color: #E5E7EB;
+  color: #1F2937;
+  display: flex;
+  flex-direction: column;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  margin: 10% 17% 0 17%;
+}
+
+.author {
+  display: flex;
+  justify-content: right;
+  margin: 0 17% 10% 17%;
+  font-weight: bolder;
+  font-size: 24px;
+}
