--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ button {
   justify-content: center;
   align-items: center;
   gap: 8px;
-  width: 150px;
+  width: 200px;
   color: rgb(70, 75, 80);
 }
 
@@ -110,14 +110,12 @@ button {
 
 .illustration {
   width: inherit;
-  height: 150px;
-  border: 3px solid #3882F6;
-  border-radius: 10px;
+  height: auto;
 }
 
 .testimonial-section {
-  background-color: #E5E7EB;
-  color: #1F2937;
+  background-color: black;
+  color: white;
   display: flex;
   flex-direction: column;
 }
@@ -144,11 +142,10 @@ button {
 }
 
 .cta-box {
-  background-color: #3882F6;
+  background-color: black;
   display: flex;
   justify-content: space-between;
   gap: 50px;
-  border-radius: 10px;
   width: 50%;
   padding: 4% 10%;
   margin: 7% 2%;
@@ -168,6 +165,7 @@ button {
 }
 
 .cta-sign-up {
+  background-color: black;
   color: #F9FAF8;
   font-weight: bold;
   border: 2px solid #F9FAF8;
